--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="activities.html">活动展示</a></li>
                 <li><a href="projects.html">项目成果</a></li>
                 <li><a href="join.html">加入我们</a></li>
+                <li><button id="loginBtn" class="login-btn">登录</button></li>
             </ul>
             <div class="nav-toggle">
                 <span></span>
@@ -99,7 +100,7 @@
                 <div class="footer-section">
                     <h3>卓然创客社团</h3>
                     <p>武威第十八中学</p>
-                    <p>地址：甘肃省武威市凉州区</p>
+                    <p>地址：甘肃省武威市凉州区凤凰路163号</p>
                 </div>
                 <div class="footer-section">
                     <h3>快速链接</h3>
@@ -111,8 +112,8 @@
                 </div>
                 <div class="footer-section">
                     <h3>联系我们</h3>
-                    <p>邮箱：zrck@ww18z.com</p>
-                    <p>电话：0936-XXXXXXX</p>
+                    <p>邮箱：2959665467@qq.com</p>
+                    <p>电话：17793528289</p>
                 </div>
             </div>
             <div class="footer-bottom">
