--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <!-- 你的数据库配置（先创建这个文件） -->
-<script src="supabase-config.js"></script>
+<script src="JS/supabase-config.js"></script>
 
 <!-- 数据库操作工具 -->
-<script src="database-tool.js"></script>
+<script src="JS/database-tool.js"></script>
 
 <!-- 简单编辑器（可选） -->
-<script src="simple-editor.js"></script>
+<script src="JS/simple-editor.js"></script>
 
 <!-- 初始化代码 -->
 <script>
