--- a/admin-panel.html
+++ b/admin-panel.html
@@ -36,8 +36,8 @@
 
   <script>
     // 初始化Supabase
-    const supabaseUrl = 'YOUR_SUPABASE_URL';
-    const supabaseKey = 'YOUR_SUPABASE_KEY';
+    const supabaseUrl = 'https://wxbemuwgiiucdgmbhbvg.supabase.co';
+    const supabaseKey = 'sb_publishable_KuzTRmYOZ9P6UmKgmb_VwA_6Qj_A6Nk';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     // 加载用户列表
